--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -13,7 +13,7 @@
         >
 
     <testsuites>
-        <testsuite name="TestBundle Test Suite">
+        <testsuite name="EEDataExporterBundle Test Suite">
             <directory>./Tests</directory>
         </testsuite>
     </testsuites>
