--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -24,6 +24,8 @@
             <exclude>
                 <directory>./Tests</directory>
                 <directory>./vendor</directory>
+                <directory>./DependencyInjection</directory>
+                <directory>./Resources</directory>
             </exclude>
         </whitelist>
     </filter>
