--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,11 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.2",
-        "symfony/framework-bundle": ">=2.1,<2.3-dev"
+        "symfony/http-foundation": ">=2.0,<2.3-dev",
+        "symfony/property-access": ">=2.0,<2.3-dev"
     },
     "require-dev": {
-        "symfony/yaml": "2.1.*"
+        "symfony/yaml": ">=2.0,<2.3-dev"
     },
     "autoload": {
         "psr-0": { "EE\\DataExporterBundle": "" }
