class as service parameter, license file, composer.json fix, escaping in xml

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,4 +1,7 @@
+parameters:
+    ee.dataexporter.class: EE\DataExporterBundle\Service\DataExporter
+
 services:
     ee.dataexporter:
-        class: EE\DataExporterBundle\Service\DataExporter
+        class: %ee.dataexporter.class%
         public: true
