--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "ee/dataexporter-bundle",
-    "type": "library",
+    "type": "symfony-bundle",
     "description": "Easy export data to CSV, XML, HTML, JSON or XLS",
     "keywords": ["exporter","csv","xls", "xml", "json"],
     "homepage": "http://laboratorium.ee",
