--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,12 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.3",
-        "symfony/http-foundation": ">=2.0,<2.3-dev",
-        "symfony/property-access": ">=2.0,<2.3-dev"
+        "symfony/framework-bundle": "~2.1",
+        "symfony/http-foundation": "~2.1",
+        "symfony/property-access": "~2.1"
     },
     "require-dev": {
-        "symfony/yaml": ">=2.0,<2.3-dev"
+        "symfony/yaml": "~2.1"
     },
     "autoload": {
         "psr-0": { "EE\\DataExporterBundle": "" }
