--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,11 @@ php:
   - 5.4
   - 5.5
 
+matrix:
+  allow_failures:
+    - php: 5.5
+
 before_script:
-    - curl -s http://getcomposer.org/installer | php
-    - php composer.phar install --dev
+    - COMPOSER_ROOT_VERSION=dev-master composer --prefer-source --dev install
 
 script: phpunit --coverage-text
