--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.3",
-        "symfony/framework-bundle": "~2.1",
-        "symfony/http-foundation": "~2.1",
-        "symfony/property-access": "~2.1"
+        "symfony/framework-bundle": ">=2.1,<5",
+        "symfony/http-foundation": ">=2.1,<5",
+        "symfony/property-access": ">=2.1,<5"
     },
     "require-dev": {
         "symfony/yaml": "~2.1"
