Quote service definition referencing a parameter
To prevent deprecation warning: "Not quoting the scalar
"%ee.dataexporter.class%" starting with the "%" indicator character is
deprecated since Symfony 3.1 and will throw a ParseException in 4.0"

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -3,5 +3,5 @@ parameters:
 
 services:
     ee.dataexporter:
-        class: %ee.dataexporter.class%
+        class: "%ee.dataexporter.class%"
         public: true
